# formal-language-prepretraining

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: main_c4.env  paperlike_1b.env  smoke.env
results_expected/: main_ci_summary.csv  paperlike_1b_0_15_summary.csv
scripts/: 00_prepare_c4.sh  01_generate_formal_data.sh  02_build_noise_mixes.sh  03_run_main_c4.sh  04_run_smoke.sh  05_run_main_c4_parallel.sh  06_run_main_c4_10k_with_ntfy.sh  07_run_paperlike_1b_0_15.py  08_run_paperlike_1b_0_15_with_ntfy.sh  aggregate_results.py  analyze_main_results.py  build_noise_family_datasets.py  build_pt_token_budget_mixes.py  build_uniform_noise_dataset.py  convert_to_dataset.py  make_tiny_data.py  prepare_c4.py  prepare_c4_skip_train_steps.py
src/prepretrain/: __init__.py  train.py
src/prepretrain/formal/: __init__.py  data_utils.py
src/prepretrain/formal/linear_rnn/: __init__.py  cli.py  dataset.py  linear_rnn.py
